LCP PERF: implementation of cut oriented thread communications.
FEAT:
- support for bcopy, zcopy (+sync) task send.
- requests are pushed directly to the tag list of the destination task.

BUFIXES:
- wrong sizeof that created buffer overflow.
- support for task send in probe
- support for derived datatype

REFACTO:
- remove some unecessary includes
- moved math function from lcp_common.h to mpc_math.h in MPC_Common
- use same structure for both implementation of mempool. Performance was
  not tested to compare both implementations.
- FIXMEs removal
- include cleaning

NOTES:
- bcopy will always perform a buffered copy of the data. This is due to
  the fact that we need support for derived datatype. While this is not
  otpimal for all cases, now it is conformed with the semantic of the
  call and in any cases, zcopy will always be used except for derived
  datatypes.

--- a/configure.ac
+++ b/configure.ac
@@ -974,13 +974,24 @@ fi
 
 AM_CONDITIONAL([MPC_BUILD_OPENPA], [test "x$build_openpa" = "xyes"])
 
-MPC_DETECT_DEPENDENCY([ck_stack.h],[ck], [ck_stack_pop_upmc], [CK], [], [], [ck])
-MPC_REQUIRED_DEPENDENCY([ck], [$mpc_dep_found])
+AC_ARG_ENABLE([ck],
+              [AS_HELP_STRING([--enable-ck],
+                              [If CK is to be used])],
+                              [use_ck=$enableval],
+                              [use_ck=maybe])
+
+if test "x$use_ck" = "xyes"; then
+    MPC_DETECT_DEPENDENCY([ck_stack.h],[ck], [ck_stack_pop_upmc], [CK], [], [], [ck])
+    MPC_REQUIRED_DEPENDENCY([ck], [$mpc_dep_found])
+    AC_DEFINE([MPC_USE_CK], [1], [concurrency-kit support is enabled])
+    ck_enabled="yes"
+fi
+
+AM_CONDITIONAL([CK_ENABLED], [test "x$ck_enabled" = "xyes"])
 
 #
 # Detect MPC Allocator
 #
-
 
 AC_ARG_ENABLE([mpcalloc],
 [AS_HELP_STRING([--enable-mpcalloc],
